--- a/index.html
+++ b/index.html
@@ -86,13 +86,11 @@
         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 acontent">
           <h1>ORGANIC STORE...</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, reiciendis modi perspiciatis harum porro,
-            tenetur hic maxime deserunt, qui consequuntur delectus repudiandae. Nobis animi error non, debitis ipsam
-            numquam laborum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe earum illum assumenda
-            porro, laudantium culpa expedita repellendus aspernatur totam, quod, facilis sequi iste quis rem enim
-            voluptatem asperiores minima excepturi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis
-            autem, dolorem similique animi voluptate unde minus ab exercitationem quo velit numquam rem iste eum iusto
-            aspernatur maxime mollitia itaque cupiditate.
+            Welcome to Organic E-Store, your one-stop destination for premium organic products that prioritize your health and the planet.
+            At Organic E-Store, we believe in the power of nature. That's why every item we offer is carefully sourced, eco-friendly, and free from harmful chemicals. From farm-fresh produce to sustainable personal care products, we’re committed to bringing you the best that nature has to offer.<br/>   
+            Thank you for choosing Organic E-Store as your trusted partner on your journey to a greener, healthier lifestyle. Together, we can make a difference!
+            
+            
           </p>
           <button class="btn btn-success mt-2 mb-2">Shop more <i class="fa-solid fa-eye"></i></button>
         </div>
